Version History
===============

Version 0.6.1 (unreleased)
--------------------------
* Fixed docs and test configuration
* Delete leftover temporary audio files (#224, #225, #226 thanks @dawidratynski and @A-dead-pixel)
* Test against Django 5.1
* Add ability to control color of each character (PR #235, thanks @mheidarian)
* Add support for Django REST Framework (PR #236, thanks @michalwrona01)

Version 0.6.0
-------------
* Only Django versions 4.2 or above are now supported
* Removed the old rendering methods that were deprecated in 2017.

Version 0.5.20
--------------
* Still support Django 3.2 (#222, thanks @petrklus)

Version 0.5.19
--------------
* SECURITY ISSUE: reset the random seed after an image was generated (#221, thanks @ibuler)

Version 0.5.18
--------------
* Fix some typos in documentation (#210, thanks @stweil)
* Test against Django 4.2
* Stopped testing Django < 3.2
* BaseCaptchaTextInput should set autocomplete=off on the hashkey HiddenInput (#201, thanks @eerotal)
* Test against Django 4.2a
* Fix some deprecation warnings in Pillow 9.2+
* Removed old unused conditional imports
* Format code with pre-commit and black


Version 0.5.17
--------------
* English translation created from Spanish ones (#209, thanks @tpazderka)


Version 0.5.16
--------------
* Adds a migration missing from 0.5.15 (#208, thanks @atodorov)


Version 0.5.15
--------------
* Updated test matrix, drop tests against Python3.6, test against Python3.9
* Remove dependency on six
* Test against Django 4.0a1
* Test with Python 3.10 (Django 3.2 and Django 4.0)
* Remove warning for django 3.2 (#206, thanks @MiStErLu)


Version 0.5.14
--------------
* Generate deterministic CAPTCHA images for each Captcha instance (#194, thanks @mjnaderi)
* New setting CAPTCHA_2X_IMAGE to disable the double resolution image option (#195, thanks @mjnaderi)
* Test against Django 3.2a


Version 0.5.13
--------------
* Fix DeprecationWarnings on Django 3 related to unicode (#173, thanks @jannh)