@@ -8,6 +8,7 @@ Version 0.6.1 (unreleased)
 * Test against Django 5.1
 * Add ability to control color of each character (PR #235, thanks @mheidarian)
 * Add support for Django REST Framework (PR #236, thanks @michalwrona01)
+* Audio CAPTCHA: try to detect the sample rate of the generated WAV file prior to merge (Issue #196)
 
 Version 0.6.0
 -------------
